stage(eks-8): ⓒ 유료 완전 재현 + 3서비스 메모리 실환경 검증
세션 31분 34초 ≈ $0.0716, 고아 0.

## 1단계 — ⓒ 재현 (조건부 통과)
튜토리얼만 보고 Stage 0→3b 최종 상태 도달. 코드를 열어야 했던 지점 없음.
다만 오판을 유발하는 결함 2건 발견·수정.

- 결함 ①: 0-1 db_mode 확인이 거짓 양성. `show -json`의 configuration 절이
  count=0 리소스 선언까지 담아 in-cluster인데 1을 낸다. 따랐다면 `-var db_mode=rds`로
  RDS를 실수 기동($0.025/hr). 유무 검사로 교체, 양방향 반증 통과.
  이 검사는 "개수는 db_mode를 구분 못 한다"를 고치려 도입한 대체 검사였다.
- 결함 ②: 3b-7 기대 출력에 components{db,ping}이 있으나 show-details 미설정
  (기본 never)이라 {"status":"UP"}만 나온다. 그 단계가 증명하려는 것을
  그 명령으로는 볼 수 없었다.

## 2단계 — 메모리 실환경 검증
계획 대비 편차: 노드 3대 → 2대. requests가 1568Mi로 줄어 2대 계산이 섰고,
그러면 L-47이 이론으로만 답한 "2노드에 들어간다"를 실제로 확인하게 된다.

- 2노드에 4파드 전부 배치, Pending 0 → L-47 실측 확정
- 재시작 0, OOMKilling 0
- core 345/576 · daily 282/640 · ai 175/448 · pg 33/512 (working_set/limit)
- ai-api JVM 예약 천장 412.8Mi를 컨테이너 안에서 직접 확인(플래그는 ENTRYPOINT에 구움).
  단 max는 약정이 아니라 천장 → 실측 175Mi. 위험은 조건부이며
  "metaspace가 캡에 접근하면"이 조건. jcmd 부재로 풀별 분해는 미확인.

## 그 외
- Phase 2 계획서 Stage C 표기 드리프트 정정(#409에서 완료됐는데 ⬜였다)